# zero2prod

./: Cargo.toml
.github/workflows/: audit.yml  rust.yml
src/: configuration.rs  main.rs  startup.rs
tests/: health_check.rs
